--- a/src/App.css
+++ b/src/App.css
@@ -2,65 +2,53 @@
 @import "reset.css";
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background: purple;
+	 font-family: 'Roboto', sans-serif;
+
 }
-
-h1 {
-  font-weight: 100;
-  font-size: 50px;
+ h1 {
+	 font-weight: 100;
+	 font-size: 50px;
 }
-
-.home {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-
-  img {
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-  }
-
-  .Aligner {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .Aligner-item {
-    max-width: 50%;
-  }
-
-  .menu {
-    ul {
-      li {
-        padding: 10px 15px;
-        display: inline-block;
-        font-family: 'Roboto', sans-serif;
-        font-size: 18px;
-        font-weight: 500;
-      }
-    }
-  }
-
-  .version-num {
-    background: #E8E8E8;
-    border-radius: 4px;
-    padding: 7px 15px;
-    display: inline-block;
-    font-size: 12px;
-    margin: 10px 0 20px;
-  }
-
-  a {
-    text-decoration: none;
-    color: #30395C;
-    transition: all 0.3s ease-in-out;
-
-    &:hover {
-      color: #43D4D6;
-    }
-  }
+ .home {
+	 height: 100%;
+	 width: 100%;
+	 text-align: center;
 }
+ .home img {
+	 width: 100%;
+	 max-width: 300px;
+	 margin: 0 auto;
+}
+ .home .Aligner {
+	 min-height: 100vh;
+	 display: flex;
+	 align-items: center;
+	 justify-content: center;
+}
+ .home .Aligner-item {
+	 max-width: 50%;
+}
+ .home .menu ul li {
+	 padding: 10px 15px;
+	 display: inline-block;
+	 font-family: 'Roboto', sans-serif;
+	 font-size: 18px;
+	 font-weight: 500;
+}
+ .home .version-num {
+	 background: #e8e8e8;
+	 border-radius: 4px;
+	 padding: 7px 15px;
+	 display: inline-block;
+	 font-size: 12px;
+	 margin: 10px 0 20px;
+}
+ .home a {
+	 text-decoration: none;
+	 color: #30395c;
+	 transition: all 0.3s ease-in-out;
+}
+ .home a:hover {
+	 color: #43d4d6;
+}
+@import "content-area.css";
