--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -7,7 +7,7 @@
 	 display: table;
 	 clear: both;
 }
- [class='col-'] {
+ [class*='col-'] {
 	 float: left;
 	 padding: 1em;
 	 width: 100%;
@@ -182,4 +182,3 @@
 		 width: 100%;
 	}
 }
- 
