--- a/src/css/content-area.css
+++ b/src/css/content-area.css
@@ -5,8 +5,7 @@
  #filter {
 	 height: 1150px;
 	 background: #f9f8f4;
-	 width: 30%;
-	 max-width: 300px;
+	 width: 20%;
 	 display: inline-block;
 	 float:left;
 }
@@ -54,7 +53,6 @@
 }
  #listings {
 	 width: 70%;
-		float:left;
 	 display: inline-block;
 	 padding: 30px;
 	 background: #fffeff;
@@ -98,6 +96,13 @@
  #listings .sortby-area .sort-icon .fas {
 	 font-size: 1.1rem;
 	 margin-right: 15px;
+}
+#listings .sortby-area .filter-options{
+	display:inline-block;
+	display: none;
+}
+#listings .sortby-area .filter-options i{
+	display: inline-block;
 }
  #listings .listings-results {
 	 margin-bottom: 60px;
@@ -260,4 +265,41 @@
 	 font-weight: 700;
 	 background: #ff7789;
 	 cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+	header nav{
+		display:none;
+	}
+	#filter{
+		display: none;
+	}
+	.sort-options .sort-icon i{
+		display:none;
+	}
+	#listings .sortby-area .filter-options{
+		margin-top: 10px;
+		display:inline-block;
+		cursor:pointer;
+		border: 1px solid grey;
+		border-radius: 5px;
+		padding: 10px;
+		transition: .3s ease-in-out;
+	}
+	#listings .sortby-area .filter-options:hover{
+		background: #CDCDCD;
+		color:white;
+	}
+	#listings .sortby-area .filter-options i{
+		display:inline-block;
+
+
+	}
+	#listings .sortby-area .filter-options h1{
+		display:inline-block;
+		margin-left: 10px;
+		font-family: sans-serif;
+		font-weight: 600;
+
+	}
 }
